<resources>
    <string name="view_contact">View Contact</string>
    <string name="Settings">Settings</string>
    <string name="typing">Typing...</string>
    <string name="recording">Recording...</string>
    <string-array name="autodownload">
        <item>Photos</item>
        <item>Audio</item>
        <item>Videos</item>
        <item>Files</item>
    </string-array>
    <string-array name="autodownload_cellular_defaults">
        <item>0</item>
    </string-array>
    <string-array name="autodownload_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="autodownload_wifi_defaults">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="space_or_permissions_error_toast">Error :( ,Please check Space or Permissions</string>
    <string name="unblock_contact">Unblock Contact</string>
    <string name="block_contact">Block Contact</string>
    <string name="unmute_notifications">UnMute Notifications</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="loading">Loading..</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="copied_to_clipboard">Copied To Clipboard...</string>
    <string name="image_video_not_found">CHOSEN IMAGE/Video Not Found</string>
    <string name="sending_messages">Sending Messages...</string>
    <string name="message_is_too_long">Message is Too long please try to reduce it</string>
    <string name="error_playing_this">Error playing this :(</string>
    <string name="cannot_open_this_file">cannot open this file</string>
    <string name="checking">Checking..</string>
    <string name="does_not_have_fireapp">does not have %s</string>
    <string name="user_is_blocked">User is Blocked</string>
    <string name="unblock">UnBlock</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="closeapp">Close App</string>
    <string name="grandper">Grant Permission</string>
    <string name="you_have_to_grant_permissions">You have to grant permissions in order to use this App</string>
    <string name="goseeting"><u>Go to Settings</u></string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_conversation_confirmation">Are you sure you want to delete this conversation?</string>
    <string name="current_app_version">Current version : 4.0.1</string>
    <string name="yes">YES</string>
    <string name="default_status">Heeey I am using %s!</string>
    <string name="reply">Reply</string>
    <string name="choose_number">Choose a Number</string>
    <string name="delete_messages_confirmation">Delete Message?</string>
    <string name="you">You</string>
    <string name="no">NO</string>
    <string name="count">Count</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="share">Share</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="edit1">Edit</string>
    <string name="checking_contact">Checking Contact</string>
    <string name="online">Online</string>
    <string name="could_not_get_audio_file">could not get audio file</string>
    <string name="could_not_get_this_image">Could not get this image</string>
    <string name="delete_media_from_phone">Delete Media From Phone</string>
    <string name="media_player_error">file not found or permissions missing</string>
    <string name="not_found">Not found</string>
    <string name="choose_email_app">Choose Email App</string>
    <string name="error">error</string>
    <string name="new_group">New Group</string>
    <string name="add_participants">Add Participants</string>
    <string name="exit_group">Exit group</string>
    <string name="participants">Participants</string>
    <string name="adding">Adding...</string>
    <string name="added_successfully">added successfully</string>
    <string name="group_name_changed">group name changed</string>
    <string name="exiting_group">Exiting group...</string>
    <string name="you_cant_send_messages_to_group">You cant\'t send message to this group because you are no longer a participant</string>
    <string name="no_longer_participant">You are no longer a participant in this group</string>
    <string name="delete_group">Delete group</string>
    <string name="created_this_group">created this group</string>
    <string name="removed">Removed</string>
    <string name="is_now_an_admin">is now an Admin</string>
    <string name="exit_the_group">Exit the group</string>
    <string name="added">Added</string>
    <string name="group_info">Group info</string>
    <string name="are_now_an_admin">are now an Admin</string>
    <string name="at">at</string>
    <string name="created_by">Created by</string>
    <string name="you_deleted_this_message">You deleted this message</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="delete_for_me">DELETE FOR ME</string>
    <string name="delete_for_everyone">DELETE FOR EVERYONE</string>
    <string name="message_member">Message</string>
    <string name="make_group_admin">Make group admin</string>
    <string name="dismiss_admin">Dismiss admin</string>
    <string name="remove_member">Remove</string>
    <string name="only_admins_can_post">Only admins can post</string>
    <string name="are_no_longer_an_admin">are no longer an admin</string>
    <string name="is_no_longer_an_admin">is no longer an admin</string>
    <string name="you_added">You added</string>
    <string name="you_left">You Left</string>
    <string name="left_group">Left group</string>
    <string name="you_removed">You removed</string>
    <string name="you_created_this_group">You created this group</string>
    <string name="you_changed_group_preferences">You changed group preferences</string>
    <string name="changed_group_preferences">changed group preferences</string>
    <string name="this_user_has_old_version">This user has old version of this app</string>
    <string name="exit_group_confirmation_dialog">are you sure you want to exit this group?</string>
    <string name="delete_group_confirmation">are you sure you want to delete this chat</string>
    <string name="playing_audio">Playing Audio</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="my_status">My Status</string>
    <string name="tap_to_add_status">Tap to add status update</string>
    <string name="title_activity_view_status">ViewStatusActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_my_status">My Status</string>
    <string name="your_status_will_disappear_note">Your status updates will disappear after 24 hours.</string>
    <string name="deleting">Deleting...</string>
    <string name="delete_status_confirmation">are you sure you want to delete this status?</string>
    <string name="uploading_status">Uploading status...</string>
    <string name="voice_call_hint">Voice Call</string>
    <string name="video_call_hint">Video Call</string>
    <string name="connecting">Connecting</string>
    <string name="fireapp_video_call">%s Video Call</string>
    <string name="fireapp_voice_call">%s Voice Call</string>
    <string name="call_ended">Call ended</string>
    <string name="call_denied">Denied</string>
    <string name="call_failure">Failed to connect</string>
    <string name="call_cancelled">Cancelled</string>
    <string name="user_hungup">User Hung up</string>
    <string name="call_no_answer">No answer</string>
    <string name="voice_call_confirmation">Are you sure want to make a voice call?</string>
    <string name="video_call_confirmation">are you sure you want to make a video call?</string>
    <string name="error_calling">Error performing call</string>
    <string name="missed_call_notification">Missed call from:</string>
    <string name="answer">ANSWER</string>
    <string name="decline">DECLINE</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="incoming_voice_call">Incoming Voice Call</string>
    <string name="hangup">HANGUP</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="delete_calls_confirmation">Delete Selected Calls?</string>
    <string name="viewed_statuses">Viewed updates</string>
    <string name="video_length_is_too_long">Video length is too long</string>
    <string name="there_is_active_call_currently">There is already an active call</string>
    <string name="status_uploaded">Status uploaded Successfully</string>
    <string name="error_uploading_status">Error uploading status</string>
    <string name="invite">Invite</string>
    <string name="share_app_text">Download now %s App for Instant messaging,groups support,Video Calls, and more. </string>
    <string name="no_contacts">No %s Contacts</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday_at">Yesterday at</string>
    <string name="today_at">Today at</string>
    <string name="days_ago">days ago</string>
    <string name="just_now">Just now</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="now">now</string>
    <string name="clear_chat">Clear chat</string>
    <string name="clear_chat_message">are you sure you want to delete all messages in this chat?</string>
    <string name="failed_to_load_wallpaper">Failed to load Wallpaper</string>
    <string name="mark_as_read">mark as read</string>
    <string name="unsupported_type">Unsupported type, please update the app</string>
    <string name="write_your_message">Write your message</string>
    <string name="profile_translation_name" translatable="false">profile_translation_name</string>
    <string name="backup">BACK UP</string>
    <string name="ignore_battery_dialog_title">Ignore Battery Optimization</string>
    <string name="ignore_battery_summary">In order to make sure that all messages delivered correctly you have to disable Battery Optimizations</string>
    <string name="joined_via_invite_link">joined via invite link</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="broadcast_list_info">Broadcast list info</string>
    <string name="created">Created</string>
    <string name="select">Select</string>
    <string name="message3">Message</string>
    <string name="add_contact">Add Contact</string>
    <string name="add">ADD</string>
    <string name="photo">Photo</string>
    <string name="my_events">My Events</string>
    <string name="my_buddies">My Buddies</string>
    <string name="my_guest_invites">My Guest Invites</string>
    <string name="my_testimonials">Given Testimonial</string>
    <string name="recommended_to">Recommended To</string>
    <string name="recommended_by">Recommended By</string>
    <string name="my_report_card">My Report Card</string>
    <string name="pending_responsibilities">Pending Responsibilities</string>
    <string name="my_business">My Business</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_leads">My Leads</string>
    <string name="my_requirement">My Requirement</string>
    <string name="my_prospects">My Prospects</string>
    <string name="my_groups">My Groups</string>
    <string name="my_membership">My Membership</string>
    <string name="my_recognition">My Recognition</string>
    <string name="Referralsgiven">Referrals Given</string>
    <string name="Referralsreceived">Referrals Received</string>
</resources>