<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llMyDashboard"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyBuddiesClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_buddies"
                app:tint="#084268" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_buddies"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyBusiness"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyBusinessClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_business" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_business"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyEvents"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyEventsClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_events_two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_events"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyRewards"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyRewardsClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_rewards" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_rewards"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyReportCard"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyReportCardClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_report"
                app:tint="#084268"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_report_card"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyLeads"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyLeadsClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_leads" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_leads"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyRequirements"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyRequirementsClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_requirement" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_requirement"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/allMyGuestInvites"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyGuestInvitesClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_guest_invited"
                app:tint="#084268"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_guest_invites"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPendingResponsibilities"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onPendingResponsibilitiesClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_pending_responsibilities_two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/pending_responsibilities"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llMyProspects"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_prospects"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llMyGroups"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyGroupClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_group_two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_groups"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyTestimonials"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyTesimonialsClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_testimonial" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_testimonials"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyMembership"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyMembershipClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_membership" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_membership"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRecommendedBy"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onRecommendedByClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_recommended"
                app:tint="#084268"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/recommended_by"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRecommendedTo"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onRecommendedToClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_recommended"
                app:tint="#084268"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/recommended_to"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyRecognitions"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onRecognitionClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_my_recognition" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/my_recognition"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llMyReferrals"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyReferralsGivenClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_referal_given_homwn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/Referralsgiven"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMyReferralsReceived"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:onClick="onMyReferralsReceivedClick"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_referrals_received_nav" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_jp_medium"
                android:includeFontPadding="false"
                android:text="@string/Referralsreceived"
                android:textColor="#084268"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</layout>